--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <body>
+    {% include sidebar.html %}
     <div class="banner">The layout.</div>
 
     <div class="content container">
