--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  {% include head.html %}
   <body>
     {% include sidebar.html %}
     <div class="banner">The layout.</div>
